@@ -8,7 +8,7 @@ Authors@R: c(
         person("Vladimir", "Kiselev", role=c("ctb"), email="vk6@sanger.ac.uk"),
         person("Alan", "O'Callaghan", role=c("ctb"), email="alan.ocallaghan@outlook.com"))
 Version: 1.17.4
-Date: 2020-07-16
+Date: 2020-09-06
 License: GPL-3
 Title: Single-Cell Analysis Toolkit for Gene Expression Data in R
 Description: A collection of tools for doing various analyses of
